--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.48.0",
-    "eslint-config-next": "^13.4.19"
+    "eslint-config-next": "^13.4.19",
+    "rimraf": "^5.0.5"
   }
 }
