--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "agora-rtc-react": "^2.4.0",
+    "agora-rtc-sdk-ng": "^4.23.2",
     "autoprefixer": "^10.4.15",
     "firebase": "^10.1.0",
     "formik": "^2.4.3",
