--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "agora-access-token": "^2.0.4",
     "agora-rtc-react": "^2.4.0",
     "agora-rtc-sdk-ng": "^4.23.2",
     "autoprefixer": "^10.4.15",
