--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "agora-access-token": "^2.0.4",
-    "agora-rtc-react": "^2.4.0",
-    "agora-rtc-sdk-ng": "^4.23.2",
     "autoprefixer": "^10.4.15",
     "firebase": "^10.1.0",
     "formik": "^2.4.3",
@@ -24,8 +21,6 @@
     "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.3",
-    "twilio": "^5.5.1",
-    "twilio-video": "^2.27.0",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
@@ -33,7 +28,6 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.48.0",
-    "eslint-config-next": "^13.4.19",
-    "rimraf": "^5.0.5"
+    "eslint-config-next": "^13.4.19"
   }
 }
