--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "agora-token": "^2.0.3",
     "autoprefixer": "^10.4.15",
     "firebase": "^10.1.0",
     "formik": "^2.4.3",
@@ -21,6 +22,7 @@
     "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.3",
+    "twilio": "^5.5.1",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
