--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "autoprefixer": "^10.4.15",
     "firebase": "^10.1.0",
     "formik": "^2.4.3",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.1.2",
     "react-icons": "^4.10.1",
+    "react-redux": "^9.2.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.3",
     "twilio": "^5.5.1",
