--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polemica",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,28 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.6.1",
-    "autoprefixer": "^10.4.15",
-    "firebase": "^10.1.0",
-    "formik": "^2.4.3",
-    "i18next": "^23.4.4",
-    "next": "^13.4.19",
-    "postcss": "^8.4.28",
+    "@reduxjs/toolkit": "^2.2.1",
+    "firebase": "^10.8.0",
+    "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.1.2",
-    "react-icons": "^4.10.1",
-    "react-redux": "^9.2.0",
-    "react-toastify": "^9.1.3",
-    "tailwindcss": "^3.3.3",
-    "twilio": "^5.5.1",
-    "uuid": "^9.0.0",
-    "yup": "^1.2.0"
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.48.0",
-    "eslint-config-next": "^13.4.19"
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
