--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.1",
-    "firebase": "^10.8.0",
-    "next": "14.1.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "firebase": "^10.7.1",
+    "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-redux": "^9.1.0"
+    "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4",
+    "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
+    "tailwindcss": "^3.4.0",
+    "webrtc-adapter": "^8.2.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.32"
   }
 }
